--- a/package.json
+++ b/package.json
@@ -6,35 +6,36 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test:default": "ng test --include app/app.component.spec.ts",
-    "test:ng-mocks": "ng test --include app/app.component.ngmocks.spec.ts"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.1.0",
-    "@angular/common": "^15.1.0",
-    "@angular/compiler": "^15.1.0",
-    "@angular/core": "^15.1.0",
-    "@angular/forms": "^15.1.0",
-    "@angular/platform-browser": "^15.1.0",
-    "@angular/platform-browser-dynamic": "^15.1.0",
-    "@angular/router": "^15.1.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "@angular/animations": "15.2.6",
+    "@angular/common": "15.2.6",
+    "@angular/compiler": "15.2.6",
+    "@angular/core": "15.2.6",
+    "@angular/forms": "15.2.6",
+    "@angular/platform-browser": "15.2.6",
+    "@angular/platform-browser-dynamic": "15.2.6",
+    "@angular/router": "15.2.6",
+    "lodash-es": "4.17.21",
+    "rxjs": "7.8.0",
+    "tslib": "2.5.0",
+    "zone.js": "0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.1.1",
-    "@angular/cli": "~15.1.1",
-    "@angular/compiler-cli": "^15.1.0",
-    "@types/jasmine": "~4.3.0",
-    "jasmine-core": "~4.5.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
-    "ng-mocks": "^14.8.0",
-    "typescript": "~4.9.4"
+    "@angular-devkit/build-angular": "15.2.6",
+    "@angular/cli": "15.2.6",
+    "@angular/compiler-cli": "15.2.6",
+    "@types/jasmine": "4.3.1",
+    "@types/lodash-es": "4.17.7",
+    "jasmine-core": "4.6.0",
+    "karma": "6.4.1",
+    "karma-chrome-launcher": "3.1.1",
+    "karma-coverage": "2.2.0",
+    "karma-jasmine": "5.1.0",
+    "karma-jasmine-html-reporter": "2.0.0",
+    "ng-mocks": "14.8.0",
+    "typescript": "4.9.5"
   }
 }
